--- a/index.html
+++ b/index.html
@@ -1,84 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylsheet" href="Assets/css/style.css">
 </head>
+
 <body>
     <div id="header">
-        <header >
+        <header>
             <h1>Weather Dashboard</h1>
         </header>
     </div>
 
-   
+
     <div id="main-section" class="row">
         <!-- menu to search for a city -->
         <div class="col-6 col-md-4 d-flex border border-dark" id="search-menu">
-            <form>
-                <div class="form-group " id="search-form">
-                    <label><h2> Search for a city:</h2></label><br>
-                    <input type="text" placeholder="Enter a city"><br><br>
+            <form id="search-form">
+                <div class="form-group ">
+                    <label>
+                        <h2>Search for a city:</h2>
+                    </label><br>
+                    <input type="text" placeholder="Enter a city" id="input-value"><br><br>
                     <!-- the search button will retrieve the weatheer for that city-->
                     <button class="btn btn-primary" type="submit" id="search-button">Search</button><br><br>
-
-              
-                    <!-- different buttons for the different cities that upon clicking will retrive their data -->
-                    <button class="btn btn-dark" type="button" id="city-button">Los Angeles</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">Chicago</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">New York</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">Orlando</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">San Francisco</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">Seattle</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">Denver</button><br><br>
-                    <button class="btn btn-dark" type="button" id="city-button">Atlanta</button><br><br>
                 </div>
             </form>
+
+            <div id="city-history">
+
+            </div>
         </div>
 
         <div class="col-12 col-md-8" id="weather">
+
             <!-- for the day of forecast -->
-            <!-- have it display to the right -->
             <div class='border border-dark' id="day-of-forecast">
-                <h2 id="current-day">Filler space</h2>
-                <p id="temp"> Temp:</p>
-                <p id="wind"> Wind:</p>
-                <p id="humidity">Humidity:</p>
-                <p id="UV-index">UV Index:</p>
+                <h2>Current Day Forecast:</h2>
+                <h3 id="current-day"></h3>
+                <h3 id="city-name"></h3>
+                <img id="weather-icon">
+                <p id="current-temp"></p>
+                <p id="current-wind"></p>
+                <p id="current-humidity"></p>
+                <p id="current-UV-index"></p>
+                <p id="current-description"></p>
             </div>
 
             <!-- five day forecast -->
-            <!-- have it display to the right -->
             <div class='border border-dark' id="five-day-forecast">
                 <h2>5-Day Forecast:</h2>
                 <div id="day-1">
-
+                    <h3 class="day" id="day1"></h3>
+                    <img class="icon" id="weather1"></h3>
+                    <p class="temperature" id="temp1"></p>
+                    <p class="wind-speed" id="wind1"></p>
+                    <p class="humidity" id="humidity1"></p>
                 </div>
 
                 <div id="day-2">
-
+                    <h3 class="day" id="day2"></h3>
+                    <img class="icon" id="weather2"></h3>
+                    <p class="temperature" id="temp2"></p>
+                    <p class="wind-speed" id="wind2"></p>
+                    <p class="humidity" id="humidity2"></p>
                 </div>
 
                 <div id="day-3">
-
+                    <h3 class="day" id="day3"></h3>
+                    <img class="icon" id="weather3"></h3>
+                    <p class="temperature" id="temp3"></p>
+                    <p class="wind-speed" id="wind3"></p>
+                    <p class="humidity" id="humidity3"></p>
                 </div>
 
                 <div id="day-4">
-
+                    <h3 class="day" id="day4"></h3>
+                    <img class="icon" id="weather4"></h3>
+                    <p class="temperature" id="temp4"></p>
+                    <p class="wind-speed" id="wind4"></p>
+                    <p class="humidity" id="humidity4"></p>
                 </div>
 
                 <div id="day-5">
+                    <h3 class="day" id="day5"></h3>
+                    <img class="icon" id="weather5"></h3>
+                    <p class="temperature" id="temp5"></p>
+                    <p class="wind-speed" id="wind5"></p>
+                    <p class="humidity" id="humidity5"></p>
+
+                </div>
             </div>
         </div>
-    </div>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="Assets/js/script.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+
+        <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
+
+
+        <script src="Assets/js/script.js"></script>
 </body>
+
 </html>
